src/gui/kernel/qdnd.cpp
@@ -113,11 +113,12 @@ Qt::DropAction QDragManager::drag(QDrag *o)
 
     m_object->d_func()->target = 0;
 
-    QGuiApplicationPrivate::instance()->notifyDragStarted(o);
+    QGuiApplicationPrivate::instance()->notifyDragStarted(m_object.data());
     const Qt::DropAction result = m_platformDrag->drag(m_object);
-    m_object = 0;
-    if (!m_platformDrag->ownsDragObject())
-        o->deleteLater();
+    if (!m_object.isNull() && !m_platformDrag->ownsDragObject())
+        m_object->deleteLater();
+
+    m_object.clear();
     return result;
 }
 
